@@ -85,7 +85,7 @@ qalter
 [\-a date_time] [\-A account_string] [\-c interval] [\-e path]
 [\-h hold_list] [\-j join] [\-k keep] [\-l resource_list] 
 [\-m mail_options] [\-M user_list] [\-N name] [\-o path] [\-p priority]
-[\-r c] [-S path] [\-u user_list] [\-W additional_attributes]
+[\-r c] [-S path] [\-u user_list] [\-v variable_list] [\-W additional_attributes]
 job_identifier...
 .Sh DESCRIPTION
 The
@@ -604,6 +604,8 @@ attribute is set to the value of
 .Ig
 .IP
 This attribute cannot be altered once the job has begun execution.
+.IP "-v variable_list" 8
+Overrides the job's environmental variable list.
 .IP "-W additional_attributes" 8
 The -W option allows for the modification of additional job attributes.
 The general syntax of the -W is in the form:
